Fixed the unbound local variable 'order' issue by moving its creation after successful payment processing and ensured the order is not added to the database twice. Changed button names and styled on mobile

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -104,6 +104,16 @@ p.small.black-text.my-0 {
     margin: 1rem 0 1rem 0;
 }
 
+.btn,
+.btn-large,
+.btn-small,
+.btn-floating,
+.btn-large,
+.btn-small,
+.btn-flat {
+    font-size: 11px;
+}
+
 div.button-container.complete,
 p.small.black-text.my-0 {
     justify-content: right;
